2007-12-21  Oliver Hader  <oh@inpublica.de>

	* (minor) Fixed bug #6007: IRRE - Child records with image fields are not shown in m:n disposal
	* (minor) Fixed hanging recordset in t3lib_TCEmain::getSortNumber

2007-12-20	Thomas Hempel  <thomas@typo3-unleashed.net>

	* Added meta-subcategory "root" for adding deliverables to main categories.

2007-12-19	Thomas Hempel  <thomas@typo3-unleashed.net>

	* Feature request #6988: Return errors from performUpdateQueries (Thanks to Francois Suter)

2007-12-19  Ernesto Baschny <ernst@cron-it.de>

	* Feature request #3822, #5065: Make hardcoded (250000 bytes) max attachment size for mailform configurable: $TYPO3_CONF_VARS['FE']['formmailMaxAttachmentSize']

2007-12-17  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #6996: Versioning in clickmenu was unavailable for non-admins due to a problem of an earlier bugfix #4160 (Thanks to Helmut Hummel for the correction)
	* Code cleanup: #6990 use prototype functions instead of own ones where possible in clickmenu (Thanks to Helmut Hummel)

2007-12-17  Andreas Otto <andreas.otto@dkd.de>

	* Feature request #6945: Login failures can be logged with t3lib_div::syslog().

2007-12-16  Benjamin Mack  <mack@xnos.org>

	* (bugfix) #6955: fileadmin contextual menu doesn't popup well

2007-12-16  Ingo Renner	<ingo@typo3.org>

	* removed width css property from workspace selector toolbar item as it caused layout issues in non english backends

2007-12-16  Benjamin Mack  <mack@xnos.org>

	* (bugfix) #6859: Taskcenter - Submodules are not shown (fixed backwards-compatibility by Malte Jansen)
	* (bugfix) #6879: Sticky top icons in alt_doc: missing
	   button when columnsOnly is set

2007-12-15  Ingo Renner	<ingo@typo3.org>

	* fixed bug #6921: labels in t3lib/stddb/tbl_be.php hardcoded

2007-12-15  Benjamin Mack  <mack@xnos.org>

	* (cleanup) #6826: Removed "Show Description for Fields" checkbox in alt_doc.php

2007-12-14  Thomas Hempel  <thomas@typo3-unleashed.net>
